# aivo-py

./: list-audio-devices.py  main.py  pyproject.toml  speech-to-text.py  stt-faster-whisper.py  stt-gui.py  stt-mlx.py
app/: .gitignore  speech_to_text.py
