[project]
name = "aivo-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.2",
    "numpy>=2.2.6",
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.2",
    "speechrecognition>=3.14.3",
    "sqlalchemy>=2.0.41",
]
